tests/errors/dispatch-wrong.au
struct Class {
}

func (self: Class) init() {
}

init("A");